@@ -8,12 +8,13 @@
 
 package org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.distributed_cpa.callstack;
 
+import com.google.common.base.Function;
 import com.google.common.base.Splitter;
 import java.util.List;
 import java.util.Optional;
-import org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.decomposition.BlockNode;
-import org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.distributed_cpa.operators.DeserializeOperator;
-import org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.exchange.actor_messages.BlockSummaryMessage;
+import org.sosy_lab.cpachecker.cfa.model.CFANode;
+import org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.distributed_cpa.operators.deserialize.DeserializeOperator;
+import org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.exchange.actor_messages.DssMessage;
 import org.sosy_lab.cpachecker.core.interfaces.AbstractState;
 import org.sosy_lab.cpachecker.core.interfaces.StateSpacePartition;
 import org.sosy_lab.cpachecker.cpa.callstack.CallstackCPA;
@@ -22,25 +23,26 @@ import org.sosy_lab.cpachecker.cpa.callstack.CallstackState;
 public class DeserializeCallstackStateOperator implements DeserializeOperator {
 
   private final CallstackCPA parentCPA;
-  private final BlockNode block;
+  private final Function<Integer, CFANode> converter;
 
-  public DeserializeCallstackStateOperator(CallstackCPA pParentCPA, BlockNode pBlockNode) {
+  public DeserializeCallstackStateOperator(
+      CallstackCPA pParentCPA, Function<Integer, CFANode> pConverter) {
     parentCPA = pParentCPA;
-    block = pBlockNode;
+    converter = pConverter;
   }
 
   @Override
-  public AbstractState deserialize(BlockSummaryMessage pMessage) {
-    Optional<String> state = pMessage.getAbstractStateString(parentCPA.getClass());
+  public AbstractState deserialize(DssMessage pMessage) {
+    Optional<String> state = pMessage.getAbstractState(parentCPA.getClass()).map(Object::toString);
     if (state.isEmpty()) {
       return parentCPA.getInitialState(
-          block.getNodeWithNumber(pMessage.getTargetNodeNumber()),
+          converter.apply(pMessage.getTargetNodeNumber()),
           StateSpacePartition.getDefaultPartition());
     }
     String callstackJSON = state.orElse("");
     if (callstackJSON.isBlank()) {
       return parentCPA.getInitialState(
-          block.getNodeWithNumber(pMessage.getTargetNodeNumber()),
+          converter.apply(pMessage.getTargetNodeNumber()),
           StateSpacePartition.getDefaultPartition());
     }
     List<String> parts = Splitter.on(DistributedCallstackCPA.DELIMITER).splitToList(callstackJSON);
@@ -51,7 +53,7 @@ public class DeserializeCallstackStateOperator implements DeserializeOperator {
           new CallstackState(
               previous,
               properties.get(1),
-              block.getNodeWithNumber(Integer.parseInt(properties.get(0))));
+              converter.apply(Integer.parseInt(properties.getFirst())));
     }
     return previous;
   }
