@@ -88,7 +88,7 @@ public class ListDebugger {
    */
   public ListDebugger withNestedList(
       int offsetTowardsNested, int pSize, int pNfo, int pNextPtrTargetOffset) {
-    this.nestedOffset = Optional.of(offsetTowardsNested);
+    nestedOffset = Optional.of(offsetTowardsNested);
     if (nestedListShape.isEmpty()) {
       nestedListShape = Optional.of(new ListDebugger(pSize, pNfo, pNextPtrTargetOffset, logger));
     } else {
@@ -109,7 +109,7 @@ public class ListDebugger {
       int pNextPtrTargetOffset,
       int pPfo,
       int pPrevPtrTargetOffset) {
-    this.nestedOffset = Optional.of(offsetTowardsNested);
+    nestedOffset = Optional.of(offsetTowardsNested);
     if (nestedListShape.isEmpty()) {
       nestedListShape =
           Optional.of(
@@ -135,7 +135,7 @@ public class ListDebugger {
   }
 
   private String printList(List<ListElement> list) {
-    String listString = "\n";
+    StringBuilder listString = new StringBuilder("\n");
     String[][] doubleNestedListStrings = new String[list.size()][];
     int largestNested = 0;
 
@@ -143,8 +143,8 @@ public class ListDebugger {
     for (int i = 0; i < list.size(); i++) {
       ListElement elem = list.get(i);
       doubleNestedListStrings[i] = new String[1];
-      if (!elem.listItems.isEmpty() && this.nestedOffset.isPresent()) {
-        List<ListElement> maybeNested = elem.memorylistItems.get(this.nestedOffset.orElseThrow());
+      if (!elem.listItems.isEmpty() && nestedOffset.isPresent()) {
+        List<ListElement> maybeNested = elem.memorylistItems.get(nestedOffset.orElseThrow());
         if (maybeNested != null) {
           ImmutableList<ListElement> nestedList = (ImmutableList<ListElement>) maybeNested;
           doubleNestedListStrings[i] = new String[nestedList.size() + 1];
@@ -168,16 +168,16 @@ public class ListDebugger {
       for (int i = 0; i < doubleNestedListStrings.length; i++) {
         if (doubleNestedListStrings[i].length > nested
             && doubleNestedListStrings[i][nested] != null) {
-          listString += doubleNestedListStrings[i][nested];
+          listString.append(doubleNestedListStrings[i][nested]);
         } else {
-          listString += "       ";
+          listString.append("       ");
         }
         if (i + 1 == doubleNestedListStrings.length) {
-          listString += "\n";
+          listString.append("\n");
         }
       }
     }
-    return listString + "\n";
+    return listString.append("\n").toString();
   }
 
   public List<ListElement> buildListFromObjectWithPtrToList(
@@ -188,13 +188,13 @@ public class ListDebugger {
                 objWPtrToList, BigInteger.valueOf(readOffsetForPtr), smg.getSizeOfPointer(), false)
             .getHvEdges();
     if (edges.size() != 1
-        || !smg.isPointer(edges.get(0).hasValue())
-        || edges.get(0).hasValue().isZero()) {
+        || !smg.isPointer(edges.getFirst().hasValue())
+        || edges.getFirst().hasValue().isZero()) {
       // No List yet
       return ImmutableList.of();
     }
 
-    SMGPointsToEdge pteList = smg.getPTEdge(edges.get(0).hasValue()).orElseThrow();
+    SMGPointsToEdge pteList = smg.getPTEdge(edges.getFirst().hasValue()).orElseThrow();
     if (!pteList.getOffset().isNumericValue()
         || pteList.getOffset().asNumericValue().bigIntegerValue().intValueExact() != 0) {
       throw new RuntimeException(
@@ -296,12 +296,12 @@ public class ListDebugger {
                   listElem, BigInteger.valueOf(pfo.orElseThrow()), smg.getSizeOfPointer(), false)
               .getHvEdges();
 
-      if (prevEdges.size() != 1 || !smg.isPointer(prevEdges.get(0).hasValue())) {
+      if (prevEdges.size() != 1 || !smg.isPointer(prevEdges.getFirst().hasValue())) {
         // Wierd
         throw new RuntimeException();
       }
 
-      if (prevEdges.get(0).hasValue().isZero()) {
+      if (prevEdges.getFirst().hasValue().isZero()) {
         // End of list left
         builder.add(
             new ListElement(
@@ -316,7 +316,7 @@ public class ListDebugger {
                 ImmutableMap.of()));
 
       } else {
-        SMGPointsToEdge ptePrev = smg.getPTEdge(prevEdges.get(0).hasValue()).orElseThrow();
+        SMGPointsToEdge ptePrev = smg.getPTEdge(prevEdges.getFirst().hasValue()).orElseThrow();
         Preconditions.checkArgument(
             ptePrev.getOffset().isNumericValue()
                 && ptePrev.getOffset().asNumericValue().bigIntegerValue().intValue()
@@ -348,12 +348,12 @@ public class ListDebugger {
         smg.readValue(listElem, BigInteger.valueOf(nfo), smg.getSizeOfPointer(), false)
             .getHvEdges();
 
-    if (nextEdges.size() != 1 || !smg.isPointer(nextEdges.get(0).hasValue())) {
+    if (nextEdges.size() != 1 || !smg.isPointer(nextEdges.getFirst().hasValue())) {
       // Wierd
       throw new RuntimeException();
     }
 
-    if (nextEdges.get(0).hasValue().isZero()) {
+    if (nextEdges.getFirst().hasValue().isZero()) {
       // End of list
       builder.add(
           new ListElement(
@@ -370,7 +370,7 @@ public class ListDebugger {
       return builder.build();
 
     } else {
-      SMGPointsToEdge pteNext = smg.getPTEdge(nextEdges.get(0).hasValue()).orElseThrow();
+      SMGPointsToEdge pteNext = smg.getPTEdge(nextEdges.getFirst().hasValue()).orElseThrow();
       return addNext(pteNext.pointsTo(), listElem, listElem, builder, state);
     }
   }
@@ -465,12 +465,12 @@ public class ListDebugger {
                   currentObj, BigInteger.valueOf(pfo.orElseThrow()), smg.getSizeOfPointer(), false)
               .getHvEdges();
 
-      if (prevEdges.size() != 1 || !smg.isPointer(prevEdges.get(0).hasValue())) {
+      if (prevEdges.size() != 1 || !smg.isPointer(prevEdges.getFirst().hasValue())) {
         // Wierd
         throw new RuntimeException();
       }
 
-      SMGPointsToEdge ptePrev = smg.getPTEdge(prevEdges.get(0).hasValue()).orElseThrow();
+      SMGPointsToEdge ptePrev = smg.getPTEdge(prevEdges.getFirst().hasValue()).orElseThrow();
       Preconditions.checkArgument(
           ptePrev.getOffset().isNumericValue()
               && ptePrev.getOffset().asNumericValue().bigIntegerValue().intValue()
@@ -500,12 +500,12 @@ public class ListDebugger {
         smg.readValue(currentObj, BigInteger.valueOf(nfo), smg.getSizeOfPointer(), false)
             .getHvEdges();
 
-    if (nextEdges.size() != 1 || !smg.isPointer(nextEdges.get(0).hasValue())) {
+    if (nextEdges.size() != 1 || !smg.isPointer(nextEdges.getFirst().hasValue())) {
       // Wierd
       throw new RuntimeException();
     }
 
-    if (nextEdges.get(0).hasValue().isZero()) {
+    if (nextEdges.getFirst().hasValue().isZero()) {
       // End of list
       pBuilder.add(
           new ListElement(
@@ -522,7 +522,7 @@ public class ListDebugger {
       return pBuilder.build();
 
     } else {
-      SMGPointsToEdge pteNext = smg.getPTEdge(nextEdges.get(0).hasValue()).orElseThrow();
+      SMGPointsToEdge pteNext = smg.getPTEdge(nextEdges.getFirst().hasValue()).orElseThrow();
       if (currentObj.equals(pRoot)) {
         // End through looping
         return pBuilder.build();
