@@ -8,21 +8,19 @@
 
 package org.sosy_lab.cpachecker.util;
 
-import static com.google.common.base.Preconditions.checkArgument;
 import static com.google.common.base.Preconditions.checkNotNull;
-import static com.google.common.base.Predicates.not;
 import static com.google.common.collect.FluentIterable.from;
 import static org.sosy_lab.common.collect.Collections3.elementAndList;
 import static org.sosy_lab.common.collect.Collections3.listAndElement;
 
-import com.google.common.base.Predicates;
 import com.google.common.collect.FluentIterable;
+import com.google.common.collect.HashMultimap;
 import com.google.common.collect.ImmutableCollection;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Maps;
-import com.google.common.collect.UnmodifiableIterator;
+import com.google.common.collect.Multimap;
 import com.google.common.graph.Traverser;
 import com.google.errorprone.annotations.DoNotCall;
 import com.google.errorprone.annotations.InlineMe;
@@ -30,10 +28,10 @@ import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.NavigableSet;
+import java.util.Optional;
 import java.util.Queue;
 import java.util.Set;
 import java.util.function.Function;
@@ -48,6 +46,7 @@ import org.sosy_lab.cpachecker.cfa.ast.AAstNodeVisitor;
 import org.sosy_lab.cpachecker.cfa.ast.ABinaryExpression;
 import org.sosy_lab.cpachecker.cfa.ast.ACastExpression;
 import org.sosy_lab.cpachecker.cfa.ast.ACharLiteralExpression;
+import org.sosy_lab.cpachecker.cfa.ast.ADeclaration;
 import org.sosy_lab.cpachecker.cfa.ast.AExpression;
 import org.sosy_lab.cpachecker.cfa.ast.AExpressionAssignmentStatement;
 import org.sosy_lab.cpachecker.cfa.ast.AExpressionStatement;
@@ -90,6 +89,7 @@ import org.sosy_lab.cpachecker.cfa.ast.c.CPointerExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CRightHandSide;
 import org.sosy_lab.cpachecker.cfa.ast.c.CTypeDefDeclaration;
 import org.sosy_lab.cpachecker.cfa.ast.c.CTypeIdExpression;
+import org.sosy_lab.cpachecker.cfa.ast.c.CVariableDeclaration;
 import org.sosy_lab.cpachecker.cfa.ast.java.JArrayCreationExpression;
 import org.sosy_lab.cpachecker.cfa.ast.java.JArrayInitializer;
 import org.sosy_lab.cpachecker.cfa.ast.java.JArrayLengthExpression;
@@ -102,21 +102,45 @@ import org.sosy_lab.cpachecker.cfa.ast.java.JNullLiteralExpression;
 import org.sosy_lab.cpachecker.cfa.ast.java.JRunTimeTypeEqualsType;
 import org.sosy_lab.cpachecker.cfa.ast.java.JThisExpression;
 import org.sosy_lab.cpachecker.cfa.ast.java.JVariableRunTimeType;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.SvLibBooleanConstantTerm;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.SvLibFunctionCallAssignmentStatement;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.SvLibFunctionCallExpression;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.SvLibFunctionDeclaration;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.SvLibIdTerm;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.SvLibIdTermTuple;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.SvLibIntegerConstantTerm;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.SvLibParameterDeclaration;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.SvLibRealConstantTerm;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.SvLibSymbolApplicationTerm;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.SvLibTermAssignmentCfaStatement;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.SvLibVariableDeclaration;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.SvLibVariableDeclarationTuple;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.specification.SvLibAtTerm;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.specification.SvLibCheckTrueTag;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.specification.SvLibEnsuresTag;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.specification.SvLibInvariantTag;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.specification.SvLibRequiresTag;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.specification.SvLibSymbolApplicationRelationalTerm;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.specification.SvLibTagReference;
+import org.sosy_lab.cpachecker.cfa.model.ADeclarationEdge;
 import org.sosy_lab.cpachecker.cfa.model.AssumeEdge;
 import org.sosy_lab.cpachecker.cfa.model.BlankEdge;
 import org.sosy_lab.cpachecker.cfa.model.CFAEdge;
 import org.sosy_lab.cpachecker.cfa.model.CFANode;
 import org.sosy_lab.cpachecker.cfa.model.CFATerminationNode;
-import org.sosy_lab.cpachecker.cfa.model.FunctionCallEdge;
 import org.sosy_lab.cpachecker.cfa.model.FunctionEntryNode;
 import org.sosy_lab.cpachecker.cfa.model.FunctionExitNode;
-import org.sosy_lab.cpachecker.cfa.model.FunctionReturnEdge;
 import org.sosy_lab.cpachecker.cfa.model.FunctionSummaryEdge;
+import org.sosy_lab.cpachecker.cfa.model.c.CCfaEdge;
 import org.sosy_lab.cpachecker.cfa.model.c.CStatementEdge;
 import org.sosy_lab.cpachecker.exceptions.NoException;
 import org.sosy_lab.cpachecker.util.CFATraversal.DefaultCFAVisitor;
 import org.sosy_lab.cpachecker.util.CFATraversal.TraversalProcess;
 import org.sosy_lab.cpachecker.util.LoopStructure.Loop;
+import org.sosy_lab.cpachecker.util.ast.ASTElement;
+import org.sosy_lab.cpachecker.util.ast.AstCfaRelation;
+import org.sosy_lab.cpachecker.util.ast.IfElement;
+import org.sosy_lab.cpachecker.util.ast.IterationElement;
 
 public class CFAUtils {
 
@@ -130,62 +154,31 @@ public class CFAUtils {
    * parallel edges (i.e., multiple directed edges from some node {@code u} to some node {@code v}).
    * These edges are equal, so a set would only contain one of the parallel edges.
    */
+  @InlineMe(replacement = "node.getAllEnteringEdges()")
+  @Deprecated
   public static FluentIterable<CFAEdge> allEnteringEdges(final CFANode node) {
-    checkNotNull(node);
-    return new FluentIterable<>() {
+    return node.getAllEnteringEdges();
+  }
 
-      @Override
-      public Iterator<CFAEdge> iterator() {
-        return new UnmodifiableIterator<>() {
-
-          // the index of the next edge (-1 means the summary edge)
-          private int i = (node.getEnteringSummaryEdge() != null) ? -1 : 0;
-
-          @Override
-          public boolean hasNext() {
-            return i < node.getNumEnteringEdges();
-          }
-
-          @Override
-          public CFAEdge next() {
-            if (i == -1) {
-              i = 0;
-              return node.getEnteringSummaryEdge();
-            }
-            return node.getEnteringEdge(i++);
-          }
-        };
-      }
-    };
+  /**
+   * Return an {@link Iterable} that contains the predecessor and successor of a given {@link
+   * CFAEdge}
+   *
+   * @param pEdge the edge for which the predecessor and successor should be returned
+   * @return an {@link Iterable} containing the predecessor and successor of the given edge
+   */
+  public static ImmutableList<CFANode> nodes(CFAEdge pEdge) {
+    return ImmutableList.of(pEdge.getPredecessor(), pEdge.getSuccessor());
   }
 
   /**
    * Return an {@link Iterable} that contains the entering edges of a given CFANode, excluding the
    * summary edge.
    */
+  @InlineMe(replacement = "node.getEnteringEdges()")
+  @Deprecated
   public static FluentIterable<CFAEdge> enteringEdges(final CFANode node) {
-    checkNotNull(node);
-    return new FluentIterable<>() {
-
-      @Override
-      public Iterator<CFAEdge> iterator() {
-        return new UnmodifiableIterator<>() {
-
-          // the index of the next edge
-          private int i = 0;
-
-          @Override
-          public boolean hasNext() {
-            return i < node.getNumEnteringEdges();
-          }
-
-          @Override
-          public CFAEdge next() {
-            return node.getEnteringEdge(i++);
-          }
-        };
-      }
-    };
+    return node.getEnteringEdges();
   }
 
   /**
@@ -196,33 +189,10 @@ public class CFAUtils {
    * parallel edges (i.e., multiple directed edges from some node {@code u} to some node {@code v}).
    * These edges are equal, so a set would only contain one of the parallel edges.
    */
+  @InlineMe(replacement = "node.getAllLeavingEdges()")
+  @Deprecated
   public static FluentIterable<CFAEdge> allLeavingEdges(final CFANode node) {
-    checkNotNull(node);
-    return new FluentIterable<>() {
-
-      @Override
-      public Iterator<CFAEdge> iterator() {
-        return new UnmodifiableIterator<>() {
-
-          // the index of the next edge (-1 means the summary edge)
-          private int i = (node.getLeavingSummaryEdge() != null) ? -1 : 0;
-
-          @Override
-          public boolean hasNext() {
-            return i < node.getNumLeavingEdges();
-          }
-
-          @Override
-          public CFAEdge next() {
-            if (i == -1) {
-              i = 0;
-              return node.getLeavingSummaryEdge();
-            }
-            return node.getLeavingEdge(i++);
-          }
-        };
-      }
-    };
+    return node.getAllLeavingEdges();
   }
 
   /**
@@ -235,8 +205,8 @@ public class CFAUtils {
   public static Set<CFAEdge> forwardLinearReach(CFAEdge edge) {
     CFAEdge current = edge;
     ImmutableSet.Builder<CFAEdge> builder = ImmutableSet.builder();
-    while (CFAUtils.leavingEdges(current.getSuccessor()).size() == 1) {
-      current = CFAUtils.leavingEdges(current.getSuccessor()).first().get();
+    while (current.getSuccessor().getNumLeavingEdges() == 1) {
+      current = current.getSuccessor().getLeavingEdge(0);
       builder.add(current);
     }
     return builder.build();
@@ -246,29 +216,10 @@ public class CFAUtils {
    * Return an {@link Iterable} that contains the leaving edges of a given CFANode, excluding the
    * summary edge.
    */
+  @InlineMe(replacement = "node.getLeavingEdges()")
+  @Deprecated
   public static FluentIterable<CFAEdge> leavingEdges(final CFANode node) {
-    checkNotNull(node);
-    return new FluentIterable<>() {
-
-      @Override
-      public Iterator<CFAEdge> iterator() {
-        return new UnmodifiableIterator<>() {
-
-          // the index of the next edge
-          private int i = 0;
-
-          @Override
-          public boolean hasNext() {
-            return i < node.getNumLeavingEdges();
-          }
-
-          @Override
-          public CFAEdge next() {
-            return node.getLeavingEdge(i++);
-          }
-        };
-      }
-    };
+    return node.getLeavingEdges();
   }
 
   /**
@@ -287,68 +238,12 @@ public class CFAUtils {
     return FluentIterable.from(pCfa.nodes()).transformAndConcat(CFAUtils::allLeavingEdges);
   }
 
-  @SuppressWarnings("unchecked")
-  public static FluentIterable<FunctionCallEdge> enteringEdges(final FunctionEntryNode node) {
-    return (FluentIterable<FunctionCallEdge>) (FluentIterable<?>) enteringEdges((CFANode) node);
-  }
-
-  @SuppressWarnings("unchecked")
-  public static FluentIterable<FunctionReturnEdge> leavingEdges(final FunctionExitNode node) {
-    return (FluentIterable<FunctionReturnEdge>) (FluentIterable<?>) leavingEdges((CFANode) node);
-  }
-
-  @Deprecated // entry nodes do not have summary edges
-  @InlineMe(
-      replacement = "CFAUtils.enteringEdges(node)",
-      imports = "org.sosy_lab.cpachecker.util.CFAUtils")
-  public static FluentIterable<FunctionCallEdge> allEnteringEdges(final FunctionEntryNode node) {
-    return enteringEdges(node);
-  }
-
-  @Deprecated // exit nodes do not have summary edges
-  @InlineMe(
-      replacement = "CFAUtils.enteringEdges(node)",
-      imports = "org.sosy_lab.cpachecker.util.CFAUtils")
-  public static FluentIterable<CFAEdge> allEnteringEdges(final FunctionExitNode node) {
-    return enteringEdges(node);
-  }
-
-  @Deprecated // entry nodes do not have summary edges
-  @InlineMe(
-      replacement = "CFAUtils.leavingEdges(node)",
-      imports = "org.sosy_lab.cpachecker.util.CFAUtils")
-  public static FluentIterable<CFAEdge> allLeavingEdges(final FunctionEntryNode node) {
-    return leavingEdges(node);
-  }
-
-  @Deprecated // exit nodes do not have summary edges
-  @InlineMe(
-      replacement = "CFAUtils.leavingEdges(node)",
-      imports = "org.sosy_lab.cpachecker.util.CFAUtils")
-  public static FluentIterable<FunctionReturnEdge> allLeavingEdges(final FunctionExitNode node) {
-    return leavingEdges(node);
-  }
-
-  @Deprecated // termination nodes do not have leaving edges
-  @DoNotCall
-  public static FluentIterable<CFAEdge> leavingEdges(
-      @SuppressWarnings("unused") final CFATerminationNode node) {
-    throw new AssertionError("useless method");
-  }
-
-  @Deprecated // termination nodes do not have leaving edges
-  @DoNotCall
-  public static FluentIterable<CFAEdge> allLeavingEdges(
-      @SuppressWarnings("unused") final CFATerminationNode node) {
-    throw new AssertionError("useless method");
-  }
-
   /**
    * Return an {@link Iterable} that contains the predecessor nodes of a given CFANode, excluding
    * the one reachable via the summary edge (if there is one).
    */
   public static FluentIterable<CFANode> predecessorsOf(final CFANode node) {
-    return enteringEdges(node).transform(CFAEdge::getPredecessor);
+    return node.getEnteringEdges().transform(CFAEdge::getPredecessor);
   }
 
   /**
@@ -356,7 +251,7 @@ public class CFAUtils {
    * including the one reachable via the summary edge (if there is one).
    */
   public static FluentIterable<CFANode> allPredecessorsOf(final CFANode node) {
-    return allEnteringEdges(node).transform(CFAEdge::getPredecessor);
+    return node.getAllEnteringEdges().transform(CFAEdge::getPredecessor);
   }
 
   /**
@@ -364,7 +259,7 @@ public class CFAUtils {
    * one reachable via the summary edge (if there is one).
    */
   public static FluentIterable<CFANode> successorsOf(final CFANode node) {
-    return leavingEdges(node).transform(CFAEdge::getSuccessor);
+    return node.getLeavingEdges().transform(CFAEdge::getSuccessor);
   }
 
   /**
@@ -372,7 +267,7 @@ public class CFAUtils {
    * the one reachable via the summary edge (if there is one).
    */
   public static FluentIterable<CFANode> allSuccessorsOf(final CFANode node) {
-    return allLeavingEdges(node).transform(CFAEdge::getSuccessor);
+    return node.getAllLeavingEdges().transform(CFAEdge::getSuccessor);
   }
 
   @Deprecated // entry nodes do not have summary edges
@@ -423,10 +318,11 @@ public class CFAUtils {
 
   /** Returns the other AssumeEdge (with the negated condition) of a given AssumeEdge. */
   public static AssumeEdge getComplimentaryAssumeEdge(AssumeEdge edge) {
-    checkArgument(edge.getPredecessor().getNumLeavingEdges() == 2);
-    return (AssumeEdge)
-        Iterables.getOnlyElement(
-            CFAUtils.leavingEdges(edge.getPredecessor()).filter(not(Predicates.equalTo(edge))));
+    return Iterables.getOnlyElement(
+        edge.getPredecessor()
+            .getLeavingEdges()
+            .filter(e -> !e.equals(edge))
+            .filter(AssumeEdge.class));
   }
 
   /**
@@ -495,6 +391,114 @@ public class CFAUtils {
   }
 
   /**
+   * This method returns true if the set of nodes is connected, i.e., there is a path between every
+   * pair of nodes in the set.
+   *
+   * <p>Currently, this is quite inefficient, so use with caution and only for small sets of nodes.
+   *
+   * @param pCfaNodes the set of nodes
+   * @return true if the set of nodes is connected i.e. there is a path between every pair of nodes
+   *     in the set
+   */
+  public static boolean isConnected(Set<CFANode> pCfaNodes) {
+    if (pCfaNodes.isEmpty()) {
+      return true;
+    }
+
+    Multimap<Integer, CFANode> idsToNode = HashMultimap.create();
+    Integer currentId = 0;
+    for (CFANode node : pCfaNodes) {
+      Multimap<Integer, CFANode> newIdsToNode = HashMultimap.create(idsToNode);
+      newIdsToNode.put(currentId, node);
+      for (CFANode connectedNode :
+          FluentIterable.concat(CFAUtils.allPredecessorsOf(node), CFAUtils.allSuccessorsOf(node))) {
+        for (Integer id : idsToNode.keySet()) {
+          if (newIdsToNode.get(id).contains(connectedNode)) {
+            newIdsToNode.putAll(currentId, newIdsToNode.removeAll(id));
+          }
+        }
+      }
+      idsToNode = newIdsToNode;
+      currentId++;
+    }
+
+    return idsToNode.keySet().size() == 1;
+  }
+
+  /**
+   * This method returns the location in the "original program (i.e., before simplifications done by
+   * CPAchecker) of the closest full expression as defined in section (§6.8 (4) of the C11 standard)
+   * encompassing the expression in the given edge. This is only well-defined for edges in C
+   * programs. The closest full expression is defined as one of the following:
+   *
+   * <ul>
+   *   <li>1. when the edge represents a statement, it is the full expression contained in the
+   *       statement, of which only one exists.
+   *   <li>2. when the edge contains an expression, we look for the full expression that contains
+   *       the expression inside the edge in the original source code. This is where the
+   *       pCfaAstRelation comes into play. For example for example if `x > 0` is the expression of
+   *       the edge and is part of the condition in `while (y != 0 && x > 0)` and therefore not a
+   *       full expression we search for the full expression `y != 0 && x > 0` which contains it.
+   * </ul>
+   *
+   * In summary, we either search for the full expression contained in the edge or for the full
+   * expression containing the expression of the edge.
+   *
+   * <p>There are many limitations for this functions, so please check inside the test {@link
+   * CFAUtilsTest#testFullExpression} for more details on what is supported and what is not.
+   *
+   * @param pEdge The edge for which the closest full expression should be found
+   * @param pAstCfaRelation The relation between the AST and the CFA
+   * @return The location of the closest full expression either encompassing the expression or
+   *     contained in the statement represented by the given edge
+   */
+  public static Optional<FileLocation> getClosestFullExpression(
+      CCfaEdge pEdge, AstCfaRelation pAstCfaRelation) {
+
+    if (pEdge instanceof AssumeEdge assumeEdge) {
+      // Find out the full expression encompassing the expression
+      Optional<IfElement> optionalIfElement =
+          pAstCfaRelation.getIfStructureForConditionEdge(assumeEdge);
+      Optional<IterationElement> optionalIterationElement =
+          pAstCfaRelation.getTightestIterationStructureForNode(assumeEdge.getPredecessor());
+      if (optionalIfElement.isPresent()) {
+        return Optional.of(optionalIfElement.orElseThrow().getConditionElement().location());
+      } else if (optionalIterationElement.isPresent()) {
+        Optional<ASTElement> optionalControlExpression =
+            optionalIterationElement.orElseThrow().getControllingExpression();
+        Optional<ASTElement> optionalInitClause =
+            optionalIterationElement.orElseThrow().getInitClause();
+        Optional<ASTElement> optionalIterationExpression =
+            optionalIterationElement.orElseThrow().getIterationExpression();
+        FileLocation location;
+        if (optionalControlExpression.isPresent()
+            && optionalControlExpression.orElseThrow().edges().contains(pEdge)) {
+          location = optionalControlExpression.orElseThrow().location();
+        } else if (optionalInitClause.isPresent()
+            && optionalInitClause.orElseThrow().edges().contains(pEdge)) {
+          location = optionalInitClause.orElseThrow().location();
+        } else if (optionalIterationExpression.isPresent()
+            && optionalIterationExpression.orElseThrow().edges().contains(pEdge)) {
+          location = optionalIterationExpression.orElseThrow().location();
+        } else {
+          return Optional.empty();
+        }
+        // This fixes the column end of the location
+        return pAstCfaRelation.getNextExpressionLocationBasedOnOffset(location);
+      } else {
+        // In this case the assume edge stems from another type of statement, like ternary
+        // operators. In this case we can take the location of the next possible expression which is
+        // contained in or equal to the statement from which the edge was created
+        return pAstCfaRelation.getNextExpressionLocationBasedOnOffset(pEdge.getFileLocation());
+      }
+    }
+    // This works, since the edge contains the location of the statement from which the edge was
+    // generated. This means that when we take a look at the next possible expression we get the
+    // closest full expression to it
+    return pAstCfaRelation.getNextExpressionLocationBasedOnOffset(pEdge.getFileLocation());
+  }
+
+  /**
    * This Visitor searches for backwards edges in the CFA, if some backwards edges were found can be
    * obtained by calling the method hasBackwardsEdges()
    */
@@ -521,13 +525,13 @@ public class CFAUtils {
         hasBackwardsEdges = true;
         return TraversalProcess.ABORT;
       } else if (pNode.getNumLeavingEdges() > 2) {
-        throw new AssertionError("forgotten case in traversing cfa with more than 2 leaving edges");
+        throw new AssertionError("forgotten case in traversing CFA with more than 2 leaving edges");
       } else {
         return TraversalProcess.CONTINUE;
       }
     }
 
-    public boolean hasBackwardsEdges() {
+    boolean hasBackwardsEdges() {
       return hasBackwardsEdges;
     }
   }
@@ -557,7 +561,7 @@ public class CFAUtils {
    */
   public static NavigableSet<String> filterVariablesOfFunction(
       NavigableSet<String> variables, String function) {
-    // TODO: Currently the format of the qualified name is not defined.
+    // TODO: Currently, the format of the qualified name is not defined.
     // In theory, frontends could use different formats.
     // The best would be to eliminate all uses of this method
     // (code should not use Strings, but for example AIdExpressions).
@@ -581,9 +585,9 @@ public class CFAUtils {
     waitlist.offer(ImmutableList.of(pNode));
     while (!waitlist.isEmpty()) {
       List<CFANode> currentPath = waitlist.poll();
-      CFANode pathSucc = currentPath.get(currentPath.size() - 1);
+      CFANode pathSucc = currentPath.getLast();
       List<BlankEdge> leavingBlankEdges =
-          CFAUtils.leavingEdges(pathSucc).filter(BlankEdge.class).toList();
+          pathSucc.getLeavingEdges().filter(BlankEdge.class).toList();
       if (pathSucc.getNumLeavingEdges() <= 0
           || leavingBlankEdges.size() < pathSucc.getNumLeavingEdges()) {
         blankPaths.add(currentPath);
@@ -601,9 +605,9 @@ public class CFAUtils {
     blankPaths.clear();
     while (!waitlist.isEmpty()) {
       List<CFANode> currentPath = waitlist.poll();
-      CFANode pathPred = currentPath.get(0);
+      CFANode pathPred = currentPath.getFirst();
       List<BlankEdge> enteringBlankEdges =
-          CFAUtils.enteringEdges(pathPred).filter(BlankEdge.class).toList();
+          pathPred.getEnteringEdges().filter(BlankEdge.class).toList();
       if (pathPred.getNumEnteringEdges() <= 0
           || enteringBlankEdges.size() < pathPred.getNumEnteringEdges()) {
         blankPaths.add(currentPath);
@@ -625,13 +629,15 @@ public class CFAUtils {
     // Using the method getFileLocationsFromCfaEdge produces some weird results
     // when considering the initialized global variables and stuff like that
     Set<FileLocation> allFileLocationFirstNode =
-        CFAUtils.allEnteringEdges(pNode1)
-            .append(CFAUtils.allLeavingEdges(pNode1))
+        pNode1
+            .getAllEnteringEdges()
+            .append(pNode1.getAllLeavingEdges())
             .transform(CFAEdge::getFileLocation)
             .toSet();
     Set<FileLocation> allFileLocationSecondtNode =
-        CFAUtils.allEnteringEdges(pNode2)
-            .append(CFAUtils.allLeavingEdges(pNode2))
+        pNode2
+            .getAllEnteringEdges()
+            .append(pNode2.getAllLeavingEdges())
             .transform(CFAEdge::getFileLocation)
             .toSet();
 
@@ -658,8 +664,8 @@ public class CFAUtils {
             .filter(FileLocation::isRealLocation)
             .toSet();
 
-    if (result.isEmpty() && pEdge.getPredecessor() instanceof FunctionEntryNode) {
-      FunctionEntryNode functionEntryNode = (FunctionEntryNode) pEdge.getPredecessor();
+    if (result.isEmpty() && pEdge.getPredecessor() instanceof FunctionEntryNode functionEntryNode) {
+
       if (functionEntryNode.getFileLocation().isRealLocation()) {
         return ImmutableSet.of(functionEntryNode.getFileLocation());
       }
@@ -668,13 +674,13 @@ public class CFAUtils {
   }
 
   public static Iterable<AAstNode> getAstNodesFromCfaEdge(final CFAEdge edge) {
-    switch (edge.getEdgeType()) {
-      case CallToReturnEdge:
+    return switch (edge.getEdgeType()) {
+      case CallToReturnEdge -> {
         FunctionSummaryEdge fnSumEdge = (FunctionSummaryEdge) edge;
-        return ImmutableSet.of(fnSumEdge.getExpression());
-      default:
-        return Optionals.asSet(edge.getRawAST());
-    }
+        yield ImmutableSet.of(fnSumEdge.getExpression());
+      }
+      default -> Optionals.asSet(edge.getRawAST());
+    };
   }
 
   /**
@@ -682,7 +688,7 @@ public class CFAUtils {
    * duplicates.
    */
   public static FluentIterable<String> getVariableNamesOfExpression(CExpression expr) {
-    return getIdExpressionsOfExpression(expr)
+    return getCIdExpressionsOfExpression(expr)
         .transform(id -> id.getDeclaration().getQualifiedName());
   }
 
@@ -690,8 +696,16 @@ public class CFAUtils {
    * Return all {@link CIdExpression}s that appear in an expression, in pre-order and possibly with
    * duplicates.
    */
-  public static FluentIterable<CIdExpression> getIdExpressionsOfExpression(CExpression expr) {
+  public static FluentIterable<CIdExpression> getCIdExpressionsOfExpression(CExpression expr) {
     return traverseRecursively(expr).filter(CIdExpression.class);
+  }
+
+  /**
+   * Return all {@link AIdExpression}s that appear in an expression, in pre-order and possibly with
+   * duplicates.
+   */
+  public static FluentIterable<AIdExpression> getIdExpressionsOfExpression(AExpression expr) {
+    return traverseRecursively(expr).filter(AIdExpression.class);
   }
 
   /** Get an iterable that recursively lists all AST nodes that occur in an AST (in pre-order). */
@@ -755,6 +769,34 @@ public class CFAUtils {
       }
     }
     return false;
+  }
+
+  /**
+   * Extracts all {@link CVariableDeclaration} from {@code pCfa} that are global, including
+   * duplicates, e.g. {@code int x; int x = 0;}.
+   */
+  public static ImmutableList<AVariableDeclaration> getGlobalVariableDeclarations(CFA pCfa) {
+    ImmutableList.Builder<AVariableDeclaration> rGlobalVariables = ImmutableList.builder();
+
+    CFAEdge currentEdge = Iterables.getOnlyElement(pCfa.getMainFunction().getLeavingEdges());
+    // consider only if currentEdge is declaration or blank, since all global variables
+    // declarations are before any actual statement
+    while (currentEdge instanceof ADeclarationEdge || currentEdge instanceof BlankEdge) {
+      // if declaration edge, check for global CVariableDeclarations
+      if (currentEdge instanceof ADeclarationEdge declarationEdge) {
+        ADeclaration declaration = declarationEdge.getDeclaration();
+        if (declaration.isGlobal()) {
+          if (declaration instanceof AVariableDeclaration variableDeclaration) {
+            rGlobalVariables.add(variableDeclaration);
+          }
+        }
+      }
+      if (currentEdge.getSuccessor().getLeavingEdges().size() > 1) {
+        break;
+      }
+      currentEdge = Iterables.getOnlyElement(currentEdge.getSuccessor().getLeavingEdges());
+    }
+    return rGlobalVariables.build();
   }
 
   /**
@@ -1022,6 +1064,135 @@ public class CFAUtils {
     public Iterable<? extends AAstNode> visit(JClassLiteralExpression pJClassLiteralExpression)
         throws NoException {
       return ImmutableList.of();
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> visit(SvLibVariableDeclaration pSvLibVariableDeclaration) {
+      return ImmutableList.of();
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> visit(
+        SvLibParameterDeclaration pSvLibParameterDeclaration) {
+      return ImmutableList.of();
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> accept(
+        SvLibFunctionCallExpression pSvLibFunctionCallExpression) throws NoException {
+      return FluentIterable.from(pSvLibFunctionCallExpression.getParameterExpressions());
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> accept(SvLibFunctionDeclaration pSvLibFunctionDeclaration)
+        throws NoException {
+      return FluentIterable.from(pSvLibFunctionDeclaration.getParameters());
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> accept(SvLibParameterDeclaration pSvLibParameterDeclaration)
+        throws NoException {
+      return ImmutableList.of();
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> accept(
+        SvLibVariableDeclarationTuple pSvLibVariableDeclarationTuple) throws NoException {
+      return pSvLibVariableDeclarationTuple.getDeclarations();
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> accept(SvLibAtTerm pSvLibAtTerm) throws NoException {
+      return ImmutableList.of(pSvLibAtTerm.getTerm());
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> accept(
+        SvLibSymbolApplicationTerm pSvLibSymbolApplicationTerm) {
+      return FluentIterable.concat(
+          pSvLibSymbolApplicationTerm.getTerms(),
+          ImmutableList.of(pSvLibSymbolApplicationTerm.getSymbol()));
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> accept(SvLibIdTerm pSvLibIdTerm) {
+      return ImmutableList.of(pSvLibIdTerm.getDeclaration());
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> accept(SvLibIntegerConstantTerm pSvLibIntegerConstantTerm)
+        throws NoException {
+      return ImmutableList.of();
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> accept(
+        SvLibSymbolApplicationRelationalTerm pSvLibSymbolApplicationRelationalTerm)
+        throws NoException {
+      return pSvLibSymbolApplicationRelationalTerm.getTerms();
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> accept(SvLibBooleanConstantTerm pSvLibBooleanConstantTerm)
+        throws NoException {
+      return ImmutableList.of();
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> accept(SvLibRealConstantTerm pSvLibRealConstantTerm)
+        throws NoException {
+      return ImmutableList.of();
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> accept(SvLibTagReference pSvLibTagReference) {
+      return ImmutableList.of();
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> accept(SvLibCheckTrueTag pSvLibCheckTrueTag) {
+      return ImmutableList.of(pSvLibCheckTrueTag.getTerm());
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> accept(SvLibRequiresTag pSvLibRequiresTag)
+        throws NoException {
+      return ImmutableList.of(pSvLibRequiresTag.getTerm());
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> accept(SvLibEnsuresTag pSvLibEnsuresTag)
+        throws NoException {
+      return ImmutableList.of(pSvLibEnsuresTag.getTerm());
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> accept(SvLibInvariantTag pSvLibInvariantTag)
+        throws NoException {
+      return ImmutableList.of(pSvLibInvariantTag.getTerm());
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> accept(
+        SvLibTermAssignmentCfaStatement pSvLibTermAssignmentCfaStatement) throws NoException {
+      return ImmutableList.of(
+          pSvLibTermAssignmentCfaStatement.getLeftHandSide(),
+          pSvLibTermAssignmentCfaStatement.getRightHandSide());
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> accept(
+        SvLibFunctionCallAssignmentStatement pSvLibFunctionCallAssignmentStatement)
+        throws NoException {
+      return ImmutableList.of(
+          pSvLibFunctionCallAssignmentStatement.getLeftHandSide(),
+          pSvLibFunctionCallAssignmentStatement.getRightHandSide());
+    }
+
+    @Override
+    public Iterable<? extends AAstNode> accept(SvLibIdTermTuple pSvLibIdTermTuple)
+        throws NoException {
+      return pSvLibIdTermTuple.getIdTerms();
     }
   }
 }
