@@ -47,6 +47,7 @@ import org.sosy_lab.cpachecker.cfa.types.c.CCompositeType.CCompositeTypeMemberDe
 import org.sosy_lab.cpachecker.cfa.types.c.CElaboratedType;
 import org.sosy_lab.cpachecker.cfa.types.c.CNumericTypes;
 import org.sosy_lab.cpachecker.cfa.types.c.CType;
+import org.sosy_lab.cpachecker.cfa.types.c.CTypeQualifiers;
 import org.sosy_lab.cpachecker.cfa.types.c.CTypes;
 import org.sosy_lab.cpachecker.cfa.types.c.CVoidType;
 import org.sosy_lab.cpachecker.util.Pair;
@@ -75,8 +76,7 @@ class PointerTargetSetManager {
   static CType getFakeBaseType(long size) {
     return checkIsSimplified(
         new CArrayType(
-            false,
-            false,
+            CTypeQualifiers.NONE,
             CVoidType.VOID,
             new CIntegerLiteralExpression(
                 FileLocation.DUMMY, CNumericTypes.SIGNED_CHAR, BigInteger.valueOf(size))));
@@ -91,7 +91,7 @@ class PointerTargetSetManager {
    * @return Whether the type is a fake base type or not.
    */
   static boolean isFakeBaseType(final CType type) {
-    return type instanceof CArrayType && ((CArrayType) type).getType() instanceof CVoidType;
+    return type instanceof CArrayType cArrayType && cArrayType.getType() instanceof CVoidType;
   }
 
   /**
@@ -108,7 +108,7 @@ class PointerTargetSetManager {
 
   private final CToFormulaConverterWithPointerAliasing conv;
 
-  private final FormulaEncodingWithPointerAliasingOptions options;
+  private final CFormulaEncodingWithPointerAliasingOptions options;
   private final FormulaManagerView formulaManager;
   private final BooleanFormulaManagerView bfmgr;
   private final TypeHandlerWithPointerAliasing typeHandler;
@@ -125,7 +125,7 @@ class PointerTargetSetManager {
    */
   PointerTargetSetManager(
       CToFormulaConverterWithPointerAliasing pConv,
-      FormulaEncodingWithPointerAliasingOptions pOptions,
+      CFormulaEncodingWithPointerAliasingOptions pOptions,
       FormulaManagerView pFormulaManager,
       TypeHandlerWithPointerAliasing pTypeHandler,
       ShutdownNotifier pShutdownNotifier,
@@ -505,7 +505,8 @@ class PointerTargetSetManager {
               + Joiner.on("_and_")
                   .join(
                       Iterables.transform(members, m -> m.getType().toString().replace(" ", "_")));
-      return new CCompositeType(false, false, ComplexTypeKind.UNION, members, varName, varName);
+      return new CCompositeType(
+          CTypeQualifiers.NONE, ComplexTypeKind.UNION, members, varName, varName);
     }
 
     /**
@@ -517,7 +518,7 @@ class PointerTargetSetManager {
       return type instanceof CCompositeType compositeType
           && compositeType.getKind() == ComplexTypeKind.UNION
           && !compositeType.getMembers().isEmpty()
-          && compositeType.getMembers().get(0).getName().equals(getUnitedFieldBaseName(0));
+          && compositeType.getMembers().getFirst().getName().equals(getUnitedFieldBaseName(0));
     }
   }
 
@@ -639,6 +640,10 @@ class PointerTargetSetManager {
             formulaManager.makeGreaterThan(newBaseFormula, oldAddress, true));
       }
     }
+    // this should probably only be given if
+    //  cpa.predicate.addRangeConstraintsForNondet
+    // is 'true'. But this is no-op for most cases anyway.
+    pConstraints.addConstraint(formulaManager.makeDomainRangeConstraint(newBaseFormula, false));
 
     // Add alignment constraint
     // For incomplete types, better not add constraints (imprecise) than a wrong one (unsound).
@@ -676,12 +681,16 @@ class PointerTargetSetManager {
     // zero to prevent overflows with bitvector arithmetic.
 
     pConstraints.addConstraint(makeGreaterZero(newBasePlusTypeSize));
+    pConstraints.addConstraint(
+        formulaManager.makeDomainRangeConstraint(newBasePlusTypeSize, false));
     PersistentList<Formula> highestAllocatedAddresses =
         PersistentLinkedList.of(newBasePlusTypeSize);
 
     if (pAllocationSize != null && !pAllocationSize.equals(typeSizeF)) {
       Formula basePlusAllocationSize = formulaManager.makePlus(newBaseFormula, pAllocationSize);
       pConstraints.addConstraint(makeGreaterZero(basePlusAllocationSize));
+      pConstraints.addConstraint(
+          formulaManager.makeDomainRangeConstraint(basePlusAllocationSize, false));
 
       highestAllocatedAddresses = highestAllocatedAddresses.with(basePlusAllocationSize);
     }
